--- a/CV_Student/templates/style_project.css
+++ b/CV_Student/templates/style_project.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background: linear-gradient(to bottom, #e0f7fa, #7b9acc);
+    background: linear-gradient(to bottom,white);
     display: flex;
     align-items: center;
     justify-content: center;
