--- a/CV_Student/css/style_add_education.css
+++ b/CV_Student/css/style_add_education.css
@@ -1,103 +1,3 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-}
-
-.form-container {
-    background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 600px;
-    position: relative;
-}
-
-.close-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 24px;
-    color: #888;
-    cursor: pointer;
-}
-
-.close-btn:hover {
-    color: #333;
-}
-
-h1 {
-    text-align: center;
-    color: #33cc33;
-    margin-bottom: 20px;
-    padding-bottom: 10px;
-    border-bottom: 2px solid #33cc33;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-}
-
-.form-group {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 10px;
-    align-items: center;
-}
-
-label {
-    font-weight: bold;
-    width: 150px;
-}
-
-input, select, textarea {
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 14px;
-    width: 100%;
-}
-
-input[type="radio"] {
-    margin-right: 5px;
-}
-
-.time-fields {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-
-.time-field {
-    margin-bottom: 10px;
-}
-
-.dob {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
-
-.dob select {
-    width: 48%;
-    margin-right: 4%;
-}
-
-button {
-    background-color: #33cc33;
-    color: white;
-    padding: 10px;
-    border: none;
-    border-radius: 4px;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #28a828;
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:341af0c30d811cbfb69127bd8d263e56c568fb9e0d833ad9f55e76cbfe29cb63
+size 1667
